# NetView

./: .gitignore  LICENSE  README.md  decoded_transaction.json  ngrok.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sent_0QBbtZtF0cYG5xj7.json  sent_0QD-F8oMBbR7p3SC.json  sent_kQAKOQd9PsEbmu_C.json  tsconfig.base.json
.claude/: chat1.txt  settings.local.json
api/: .env.example  package.json  test-wasm.ts  tsconfig.json
api/app/quickstart/: page.tsx
api/lib/: payment-config.ts
api/src/: index.ts  wasm-modules.d.ts
api/src/lib/: payment-config.ts  ton-api.ts  tonapi-analyzer.ts  wasm-loader-scraper.ts  wasm-loader-stats.ts  wasm-loader.ts  web-adapter.ts
api/src/routes/: facilitator.ts  joke.ts  normalize-address.ts  premium-content.ts  ton-stats.ts  trace-link.ts  wallet-analysis.ts  wallet-connection.ts  wallet-info.ts  wallet-network.ts  wallet-scraper.ts  wallet-transactions.ts  weather.ts
backend/: app.py  requirements.txt
examples/client-script/: package.json
examples/client-script/src/: address-formats.ts  pay.ts
examples/nextjs-server/: .env.example
facilitator/: .env.example
facilitator/app/: globals.css  layout.tsx  page.tsx
frontend/: index.html  index1.html  middleware.ts  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/analytics/: page.tsx
frontend/app/components/: BottomBar.tsx  BubbleMap.tsx  Counter.tsx  DetailPanel.tsx  DetailsPanel.tsx  SideNavBar.tsx  TonWalletComp.tsx  TopNavBar.tsx  WalletConnectComp.tsx
frontend/app/services/: WalletConnect.ts  walletConnect.ts
frontend/app/settings/: page.tsx
frontend/app/trace/: page.tsx
frontend/app/transactions/: page.tsx
frontend/app/utils/: api.ts  ton.ts
frontend/css/: style.css
frontend/public/: data.json  tonconnect-manifest.json
rust/ton-stats/: Cargo.toml  ton_stats_output.json
rust/wallet-analysis/: Cargo.toml
rust/wallet-analysis/src/: analysis.rs  client.rs  error.rs  lib.rs
rust/wallet-analysis/src/api/: mod.rs  v2.rs  v3.rs
rust/wallet-analysis/src/types/: classification.rs  domain.rs  identity.rs  mod.rs  nft.rs  tokens.rs  transactions.rs
rust/wallet-analysis/tests/: wallet_analysis.rs
rust/wallet-connection/: Cargo.toml
rust/wallet-connection/src/: error.rs  graph.rs  lib.rs  optimizer.rs  ton_client.rs  traversal.rs  types.rs
rust/wallet-info/: Cargo.toml
rust/wallet-info/data/: rpc.json
rust/wallet-info/src/: decoder.rs  lib.rs  main.rs  network.rs  types.rs
rust/wallet-info/src/analysis/: api.rs  client.rs  mod.rs  types.rs
rust/wallet-info/src/transactions/: mod.rs  types.rs
rust/wallet-info/tests/: analysis.rs  transactions.rs
rust/wallet-scraper/: Cargo.toml
rust/wallet-scraper/src/: bindings.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  orchestrator.rs
rust/wallet-scraper/src/sources/: bitquery.rs  fragment_scraper.rs  getgems_scraper.rs  mod.rs  tonapi.rs  tonapi_events.rs  toncenter.rs  tonscan_scraper.rs
scripts/: b64-decoder.py  get-sent-addresses.py
tests/: test-lib-alex1.ts
(+29 files in other folders)
