[package]
name = "wallet-analysis"
version = "0.1.0"
edition = "2024"

[lib]
name = "wallet_analysis"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "2"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
