[package]
name = "wallet-connection"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
reqwest-wasm = { version = "0.11.16", features = ["json"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
petgraph = "0.6"
console_error_panic_hook = "0.1"
thiserror = "2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
