[package]
name = "wallet-info"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest-wasm = { version = "0.11.16", features = ["json"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
