[package]
name = "wallet-scraper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wallet-scraper-test"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["tokio"]

[dependencies]
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6.5"
reqwest-wasm = { version = "0.11.16", features = ["json"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
tl = "0.7"
thiserror = "2.0"
console_error_panic_hook = "0.1"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
